--- a/ImageCollector/ImageCollector/ImageCollector.csproj
+++ b/ImageCollector/ImageCollector/ImageCollector.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +47,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -49,32 +68,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Image Collection Classes\ScreenCapture.cs" />
+    <Compile Include="Image Collection Classes\ImageCollectionProfile.cs" />
+    <Compile Include="Image Collection Classes\ImageProcessingProfile.cs" />
     <Compile Include="Image Collection Forms\ImageCollectionForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Image Collection Forms\ImageCollectionForm.Designer.cs" />
-    <Compile Include="Image Collection Classes\ImageCollectionProfile.cs" />
-    <Compile Include="Image Collection Forms\ImageProcessingForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Image Collection Forms\ImageCollectionForm.Designer.cs">
+      <DependentUpon>ImageCollectionForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Image Collection Forms\ImageProcessingForm.Designer.cs" />
-    <Compile Include="Image Collection Forms\ImageProcessingPreviewForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Image Collection Forms\ImageProcessingPreviewForm.Designer.cs" />
-    <Compile Include="Image Collection Classes\ImageProcessingProfile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Image Collection Forms\ImageCollectionForm.resx" />
-    <EmbeddedResource Include="Image Collection Forms\ImageProcessingForm.resx" />
-    <EmbeddedResource Include="Image Collection Forms\ImageProcessingPreviewForm.resx" />
+    <EmbeddedResource Include="Image Collection Forms\ImageCollectionForm.resx">
+      <DependentUpon>ImageCollectionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -98,6 +105,17 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
