--- a/ImageCollector/ImageCollector/ImageCollector.csproj
+++ b/ImageCollector/ImageCollector/ImageCollector.csproj
@@ -77,10 +77,19 @@
     <Compile Include="Image Collection Forms\ImageCollectionForm.Designer.cs">
       <DependentUpon>ImageCollectionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Image Collection Forms\ImageProcessingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Image Collection Forms\ImageProcessingForm.Designer.cs">
+      <DependentUpon>ImageProcessingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Image Collection Forms\ImageCollectionForm.resx">
       <DependentUpon>ImageCollectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Image Collection Forms\ImageProcessingForm.resx">
+      <DependentUpon>ImageProcessingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
