Profile saving is almost there for ImageCollectionProfile.  Need to fix the "hmmm..."

--- a/ImageCollector/ImageCollector/ImageCollector.csproj
+++ b/ImageCollector/ImageCollector/ImageCollector.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Image Collection Classes\ImageComparison.cs" />
+    <Compile Include="Image Collection Classes\SaveableProfile.cs" />
     <Compile Include="Image Collection Classes\ScreenCapture.cs" />
     <Compile Include="Image Collection Classes\ImageCollectionProfile.cs" />
     <Compile Include="Image Collection Classes\ImageProcessingProfile.cs" />
