--- a/ImageCollector/ImageCollector/ImageCollector.csproj
+++ b/ImageCollector/ImageCollector/ImageCollector.csproj
@@ -85,6 +85,12 @@
     <Compile Include="Image Collection Forms\ImageProcessingForm.Designer.cs">
       <DependentUpon>ImageProcessingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Image Collection Forms\ImageProcessingPreviewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Image Collection Forms\ImageProcessingPreviewForm.Designer.cs">
+      <DependentUpon>ImageProcessingPreviewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Image Collection Forms\ImageCollectionForm.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Image Collection Forms\ImageProcessingForm.resx">
       <DependentUpon>ImageProcessingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Image Collection Forms\ImageProcessingPreviewForm.resx">
+      <DependentUpon>ImageProcessingPreviewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
